--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -49,7 +49,7 @@ const navigation = {
   organization: [
     {
       name: "Foundation",
-      href: "foundation",
+      href: "/foundation",
     },
     {
       name: "Newsletter",
