--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -61,7 +61,7 @@ const releaseData = await getReleases()
             an <a
               href="https://github.com/ddev/ddev/discussions/categories/ddev-advisory-group"
               >Advisory Group</a
-            >, and funded via the <a href="foundation"
+            >, and funded via the <a href="/foundation"
               >DDEV Foundation</a
             >, a Colorado, USA nonprofit organization.
           </p>
