Footer newsletter needs /

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -53,7 +53,7 @@ const navigation = {
     },
     {
       name: "Newsletter",
-      href: "newsletter",
+      href: "/newsletter",
     },
 
   ],
