--- a/src/pages/foundation.astro
+++ b/src/pages/foundation.astro
@@ -32,13 +32,13 @@ const title = `DDEV Foundation`
           <p>Contact support (at) ddev.com</p>
 
           <h2>Snail Mail and Phone:</h2>
-          <pre>
-          DDEV Foundation
-          848 Montclair Dr
-          Palisade, CO 81526
-          USA
-          +1 970-462-7450
-          </pre>
+
+          DDEV Foundation<br />
+          848 Montclair Dr<br />
+          Palisade, CO 81526<br />
+          USA<br />
+          +1 970-462-7450<br /><br />
+
 
             <h2>Colorado [nonprofit corporation registration</h2>
           <p>  Review our <a href="https://www.sos.state.co.us/biz/BusinessEntityDetail.do?quitButtonDestination=BusinessEntityResults&nameTyp=ENT&masterFileId=20211820326&entityId2=20211820326&fileId=20211820326&srchTyp=ENTITY">Colorado nonprofit corporation registration</a>.
