EMAIL_URL encoded instead of obfuscated

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,6 +6,7 @@ import {
   GITHUB_ISSUES_URL,
   DOCUMENTATION_URL,
   DISCORD_URL,
+  EMAIL_URL,
   COPYRIGHT_HOLDER,
   MASTODON_URL,
   TWITTER_URL,
@@ -19,7 +20,7 @@ const navigation = {
     { name: "Docs", href: DOCUMENTATION_URL },
     { name: "Issues", href: GITHUB_ISSUES_URL },
     { name: "Discord", href: DISCORD_URL },
-    { name: "Email", mailto: "support (at) ddev.com" }
+    { name: "Email", href: EMAIL_URL }
   ],
   product: [
     { name: "About", href: "/about" },
