--- a/src/pages/foundation.astro
+++ b/src/pages/foundation.astro
@@ -15,7 +15,7 @@ const title = `DDEV Foundation`
       <div class="px-6 lg:px-0 lg:w-2/3">
         <PostBody>
           <p>
-            The DDEV Foundation, a Colorado (USA) nonprofit corporation, is the developer of [DDEV](https://ddev.readthedocs.io). It was formerly named the Localdev Foundation. It serves as the fiscal entity for the project and owns the bank account, etc.
+            The DDEV Foundation, a Colorado (USA) nonprofit corporation, is the developer of <a href="https://ddev.com">DDEV</a>. It was formerly named the Localdev Foundation. It serves as the fiscal entity for the project and owns the bank account, etc.
           </p>
           <p>
             The DDEV Foundation will be applying for US 501(c)(3) non-profit status in 2023.
@@ -29,7 +29,7 @@ const title = `DDEV Foundation`
 
           <h2>Contact the DDEV Foundation</h2>
 
-          <p>Contact support (at) ddev.com</p>
+          <p>Contact <a href="mailto: support%40ddev.com">support</a></p>
 
           <h2>Snail Mail and Phone:</h2>
 
