Scriptlet instead of iframe on newsletter page.

--- a/src/pages/newsletter.astro
+++ b/src/pages/newsletter.astro
@@ -24,7 +24,7 @@ const title = `Newsletter`
 
     <!-- NEW FORM GOES BELOW HERE -->
 
-    <iframe width='610px' height='210px' src='https://crm.zoho.com/crm/WebFormServeServlet?rid=d761f49b3421baca337046aa6e88b357c00ca36d6d951c2b6cd512fb5452c9edgide888d842d2182432c1bf117aecd6280f1bf0b73e665551779217573985104582'></iframe>
+    <script id='formScript5879720000000512037' src='https://crm.zoho.com/crm/WebFormServeServlet?rid=d761f49b3421baca337046aa6e88b357c00ca36d6d951c2b6cd512fb5452c9edgide888d842d2182432c1bf117aecd6280f1bf0b73e665551779217573985104582&script=$sYG'></script>
 
     <!--NEW FORM ENDS HERE-->
 
