Add link to about page

--- a/src/pages/foundation.astro
+++ b/src/pages/foundation.astro
@@ -15,7 +15,7 @@ const title = `DDEV Foundation`
       <div class="px-6 lg:px-0 lg:w-2/3">
         <PostBody>
           <p>
-            The DDEV Foundation, a Colorado (USA) nonprofit corporation, is the developer of <a href="https://ddev.com">DDEV</a>. It was formerly named the Localdev Foundation. It serves as the fiscal entity for the project and owns the bank account, etc.
+            The DDEV Foundation, a Colorado (USA) nonprofit corporation, is the developer of <a href="https://ddev.com">DDEV</a>. It was formerly named the Localdev Foundation. It serves as the fiscal entity for the project and owns the bank account, etc. For more, see <a href="/about">About DDEV</a>.
           </p>
           <p>
             The DDEV Foundation will be applying for US 501(c)(3) non-profit status in 2023.
