Fix documentation footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ import Icon from "./Icon.astro"
 
 const navigation = {
   support: [
-    { name: "Docs", href: DOCUMENTATION_URL },
+    { name: "Documentation", href: DOCUMENTATION_URL },
     { name: "Issues", href: GITHUB_ISSUES_URL },
     { name: "Discord", href: DISCORD_URL },
     { name: "Email", href: EMAIL_URL }
@@ -55,7 +55,7 @@ const navigation = {
 <footer>
   <div class="max-w-4xl mx-auto py-12 px-6 lg:px-0 lg:py-16">
     <div class="pb-8 xl:grid xl:grid-cols-3 xl:gap-8">
-      <div class="grid grid-cols-2 gap-8 xl:col-span-4">
+      <div class="grid grid-cols-auto gap-8 xl:col-span-4">
         <div class="md:grid md:grid-cols-4 md:gap-8">
           <div class="mt-12 md:mt-0">
             <h2 class="text-sm font-mono text-navy-300 tracking-wider">
