Zoho Newsletter signup form, more footers, foundation page (#72)
Co-authored-by: Matt Stein <m@ttste.in>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -61,8 +61,8 @@ const releaseData = await getReleases()
             an <a
               href="https://github.com/ddev/ddev/discussions/categories/ddev-advisory-group"
               >Advisory Group</a
-            >, and funded via the <a href="https://localdev.foundation"
-              >Localdev Foundation</a
+            >, and funded via the <a href="/foundation"
+              >DDEV Foundation</a
             >, a Colorado, USA nonprofit organization.
           </p>
         </PostBody>
