Minor time-has-passed updates to tutorials

--- a/src/components/AnimatedTerminal.astro
+++ b/src/components/AnimatedTerminal.astro
@@ -54,7 +54,8 @@ Container ddev-router  Running
       output: `ddev describe
 ┌─────────────────────────────────────────────────────────────────────────────────────┐
 │ Project: my-project ~/dev/my-project https://my-project.ddev.site                   │
-│ Docker environment: docker 20.10.21                                                 │
+│ Docker platform: docker-desktop                                                   │
+│ Router: traefik                                                 │
 ├────────────┬──────┬────────────────────────────────────────────┬────────────────────┤
 │ SERVICE    │ STAT │ URL/PORT                                   │ INFO               │
 ├────────────┼──────┼────────────────────────────────────────────┼────────────────────┤
