--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -39,7 +39,7 @@ const { latestVersion } = Astro.props
 
   <Terminal
     type="powershell"
-    code={`> wsl -l -v\n  NAME                   STATE           VERSION\n* Ubuntu-20.04           Stopped         2`}
+    code={`> wsl -l -v\n  NAME                   STATE           VERSION\n* Ubuntu                 Stopped         2`}
   />
 </div>
 
