Use description right

--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -12,8 +12,7 @@ import PostBody from "../components/PostBody.astro";
 ---
 <Layout
     title={title}
-    description={`A brief look at DDEV’s backstory and contributors.`}
-    noindex={false}
+    description={description}
 >
     <main class="max-w-4xl mx-auto mb-24">
         <Heading title={title} />
