--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -48,9 +48,9 @@ const { latestVersion } = Astro.props
           </li>
           <li>
             Edit the project’s <code>.devcontainer/devcontainer.json</code> file
-            to include these two lines in the “features” section:
+            to include this line in the “features” section:
             <Code
-              code={`"features": {\n    "ghcr.io/devcontainers/features/docker-in-docker:2": {},\n    "ghcr.io/ddev/ddev/install-ddev:latest": {}\n},`}
+              code={`"features": {\n    "ghcr.io/ddev/ddev/install-ddev:latest": {}\n},`}
               theme="nord"
               lang="json"
             />
