Replaced All twitter variables with X.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import {
   EMAIL_URL,
   COPYRIGHT_HOLDER,
   MASTODON_URL,
-  TWITTER_URL,
+  X_URL,
   GITHUB_URL,
 } from "../const"
 
@@ -40,8 +40,8 @@ const navigation = {
       me: true
     },
     {
-      name: "Twitter",
-      href: TWITTER_URL,
+      name: "X",
+      href: X_URL,
     },
     {
       name: "GitHub",
