--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -6,7 +6,7 @@ export interface Props {
   name:
     | "GitHub"
     | "Stack Exchange"
-    | "Twitter"
+    | "X"
     | "Discord"
     | "Apple"
     | "Windows"
@@ -53,7 +53,7 @@ const { name } = Astro.props
 }
 
 {
-  name === "Twitter" && (
+  name === "X" && (
     <svg
       fill="currentColor"
       viewBox="0 0 24 24"
