ddev darkmode version version 1.

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,10 +12,10 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
 <div class="mt-12 pt-24 pb-32 relative overflow-x-hidden">
   <div class="z-10 max-w-4xl mx-auto relative">
     <div class="max-w-2xl px-6 lg:px-0">
-      <h1 class="text-5xl font-bold">
+      <h1 class="text-5xl font-bold dark:text-white">
         Docker-based PHP development environments.
       </h1>
-      <h2 class="text-2xl my-6">
+      <h2 class="text-2xl my-6 dark:text-white">
         Container superpowers with zero required Docker skills: environments in
         minutes, multiple concurrent projects, and less time to deployment.
       </h2>
