--- a/src/components/Paging.astro
+++ b/src/components/Paging.astro
@@ -29,7 +29,7 @@ const {
 >
   {
     prevURL && (
-      <a href={prevURL} class="font-bold">
+      <a href={prevURL} class="font-bold dark:text-white">
         <ArrowLeftIcon
           className="w-5 h-5 inline-block relative"
           style={{ top: "-1px" }}
@@ -40,7 +40,7 @@ const {
   }
   {
     nextURL && (
-      <a href={nextURL} class="font-bold">
+      <a href={nextURL} class="font-bold dark:text-white">
         {nextLabel}{" "}
         <ArrowRightIcon
           className="w-5 h-5 inline-block relative"
