--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -144,7 +144,7 @@ import "../styles/global.css"
     }
     <StructuredData data={jsonLd} />
   </head>
-  <body>
+  <body class="dark:bg-slate-800">
     <Header />
     <div class="mx-auto">
       <slot />
