--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -64,8 +64,8 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12">
-        <h2>Sponsor Development</h2>
+      <div class="prose mt-12 dark:text-white">
+        <h2 class="dark:text-white">Sponsor Development</h2>
         <p>
           We’re grateful for our sponsors, and all contributions to the DDEV
           Foundation go entirely toward development. We can always use resources
@@ -87,8 +87,8 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12">
-        <h2>Help Others</h2>
+      <div class="prose mt-12 dark:text-white">
+        <h2 class="dark:text-white">Help Others</h2>
         <p>
           There’s no shortage of questions on Discord, GitHub, and Stack
           Overflow. If you can help someone out, it helps us focus more on
@@ -116,8 +116,8 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12">
-        <h2>Improve the Docs</h2>
+      <div class="prose mt-12 dark:text-white">
+        <h2 class="dark:text-white">Improve the Docs</h2>
         <p>
           It doesn’t matter whether you’ve found a typo, can wordsmith something
           to better explain or fit <a
@@ -155,8 +155,8 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12">
-        <h2>Spread the Word</h2>
+      <div class="prose mt-12 dark:text-white">
+        <h2 class="dark:text-white">Spread the Word</h2>
         <p>
           If you like using DDEV, don’t keep it to yourself! Star the project <a
             href={GITHUB_URL}
@@ -197,8 +197,8 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12">
-        <h2>Join the Advisory Group</h2>
+      <div class="prose mt-12 dark:text-white">
+        <h2 class="dark:text-white">Join the Advisory Group</h2>
         <p>
           We meet regularly to discuss DDEV’s present and future. You’re welcome
           to join us!
