--- a/src/components/BlogFeatures.astro
+++ b/src/components/BlogFeatures.astro
@@ -17,7 +17,7 @@ const recentPosts = posts
 <div class="relative my-24 px-8">
   <div class="relative max-w-5xl mx-auto">
     <div class="text-center">
-      <h2 class="text-3xl font-bold text-gray-900 sm:text-4xl">
+      <h2 class="text-3xl font-bold text-gray-900 sm:text-4xl dark:text-white">
         Latest Blog Posts
       </h2>
     </div>
