--- a/src/components/Contributors.astro
+++ b/src/components/Contributors.astro
@@ -10,7 +10,7 @@ const contributors = await getContributors()
 <div class="relative mt-36 mb-24 px-8">
   <div class="relative max-w-5xl mx-auto">
     <div id="supporters" class="text-center mb-12">
-      <h2 class="text-3xl font-bold text-gray-900 sm:text-4xl">
+      <h2 class="text-3xl font-bold text-gray-900 sm:text-4xl dark:text-white">
         Our Wonderful Supporters
       </h2>
     </div>
