--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -76,11 +76,11 @@ const features = [
   <div
     class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8"
   >
-    <h2 class="text-base font-mono text-navy-300">Features</h2>
-    <p class="mt-2 text-3xl font-bold text-gray-900 sm:text-4xl">
+    <h2 class="text-base font-mono text-navy-300 ">Features</h2>
+    <p class="mt-2 text-3xl font-bold text-gray-900 sm:text-4xl dark:text-white">
       Running in minutes, ready for the long haul.
     </p>
-    <p class="mx-auto mt-5 max-w-prose text-xl text-gray-500">
+    <p class="mx-auto mt-5 max-w-prose text-xl text-gray-500 dark:text-white">
       Start new DDEV projects in seconds. Customize, share, and extend with
       ease.
     </p>
@@ -100,7 +100,7 @@ const features = [
                       }}
                     </span>
                   </div>
-                  <h3 class="text-lg font-medium tracking-tight text-gray-900">
+                  <h3 class="text-lg font-medium tracking-tight text-gray-900 dark:text-white">
                     {feature.name}
                   </h3>
                   <p class="mt-5 text-base text-gray-500">
