--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -67,7 +67,7 @@ const navigation = {
                   <li>
                     <a
                       href={item.href}
-                      class="text-base external-link"
+                      class="text-base external-link dark:text-white"
                       target="_blank"
                     >
                       {item.name}
@@ -81,7 +81,7 @@ const navigation = {
             <h2 class="text-sm font-mono text-navy-300 tracking-wider">
               Product
             </h2>
-            <ul class="mt-4 space-y-4">
+            <ul class="mt-4 space-y-4 dark:text-white">
               {
                 navigation.product.map((item) => (
                   <li>
@@ -97,7 +97,7 @@ const navigation = {
             <h2 class="text-sm font-mono text-navy-300 tracking-wider">
               Social
             </h2>
-            <ul class="mt-4 space-y-4">
+            <ul class="mt-4 space-y-4 dark:text-white">
               {
                 navigation.social.map((item) => (
                     <li>
@@ -135,7 +135,7 @@ const navigation = {
         }
       </div>
       <p
-        class="mt-8 text-sm text-gray-600 font-mono text-center md:text-left md:mt-0 md:order-1"
+        class="mt-8 text-sm text-gray-600 font-mono text-center md:text-left md:mt-0 md:order-1 dark:text-white"
       >
         &copy; {new Date().getFullYear()}
         {COPYRIGHT_HOLDER}
