ddev darkmode version version 2.0.

--- a/src/components/FeaturedSponsors.astro
+++ b/src/components/FeaturedSponsors.astro
@@ -44,7 +44,7 @@ featuredSponsors.map((sponsor) => {
         >
           <img
             src={sponsor.logo}
-            class="block w-auto h-full"
+            class="block w-auto h-full dark:invert"
             alt={`${sponsor.name} logo`}
           />
         </a>
