--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -70,7 +70,7 @@ import {
     <a href="/" class="relative block cursor-pointer -ml-2 ">
       <span class="sr-only">DDEV logo</span>
       <img
-        class="h-8 w-auto sm:h-10"
+        class="h-8 w-auto sm:h-10 dark:invert" 
         src="/logos/ddev.svg"
         alt="DDEV logo"
         aria-hidden="true"
