--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,7 +15,7 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
       <h1 class="text-5xl font-bold dark:text-white">
         Docker-based PHP development environments.
       </h1>
-      <h2 class="text-2xl my-6 dark:text-white">
+      <h2 class="text-2xl my-6 dark:text-slate-400">
         Container superpowers with zero required Docker skills: environments in
         minutes, multiple concurrent projects, and less time to deployment.
       </h2>
@@ -34,7 +34,7 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
     </div>
 
     <div class="mt-4 text-slate-500 max-w-2xl px-6 lg:px-0">
-      <ul class="flex flex-wrap space-x-7 justify-center md:justify-start">
+      <ul class="flex flex-wrap space-x-7 justify-center md:justify-start dark:text-slate-400">
         <li class="whitespace-nowrap my-1">
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
             ><Icon name="Apple" />
