--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const jsonUrl = new URL(`/blog/feed.json`, Astro.site).toString()
     <div>
       <div class="max-w-4xl mx-auto py-24 px-6 lg:px-0">
         <div
-          class="grid gap-x-6 gap-y-8 md:gap-y-12 grid-cols-1 md:grid-cols-3"
+          class="grid gap-x-6 gap-y-8 md:gap-y-12 grid-cols-1 md:grid-cols-3 dark:text-white"
         >
           <RepoCard
             name={GITHUB_REPO}
