--- a/src/components/AppLogos.astro
+++ b/src/components/AppLogos.astro
@@ -15,12 +15,12 @@ const logos = [
 
 <div class="opacity-60">
   <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
-    <div class="flex justify-center content-center flex-wrap">
+    <div class="flex justify-center content-center flex-wrap ">
       {
         logos.map((logo) => (
           <div class="px-12 py-6">
             <img
-              class={["h-12", ...logo.extraClasses].join(" ")}
+              class={["h-12 dark:invert", ...logo.extraClasses].join(" ")}
               src={logo.src}
               alt={`${logo.name} logo`}
             />
