--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -39,14 +39,14 @@ const features = [
 ]
 ---
 
-<div class="bg-white dark:bg-slate-600">
+<div class="bg-white dark:bg-slate-900">
   <div class="max-w-6xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8">
     <div class="max-w-3xl mx-auto text-center">
       <h2 class="text-base font-mono text-navy-300 mb-3 dark:text-white">Benefits</h2>
       <h3 class="text-3xl font-extrabold text-gray-900 dark:text-white">
         Made for people that make websites.
       </h3>
-      <p class="mt-4 text-lg text-gray-500 dark:text-white">
+      <p class="mt-4 text-lg text-gray-500 dark:text-slate-400">
         DDEV handles Docker so you and your team can focus on your work.
       </p>
     </div>
@@ -65,7 +65,7 @@ const features = [
                 {feature.name}
               </p>
             </dt>
-            <dd class="mt-2 ml-9 text-base text-gray-500 dark:text-white">
+            <dd class="mt-2 ml-9 text-base text-gray-500 dark:text-slate-400">
               {feature.description}
             </dd>
           </div>
