--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -80,7 +80,7 @@ const features = [
     <p class="mt-2 text-3xl font-bold text-gray-900 sm:text-4xl dark:text-white">
       Running in minutes, ready for the long haul.
     </p>
-    <p class="mx-auto mt-5 max-w-prose text-xl text-gray-500 dark:text-white">
+    <p class="mx-auto mt-5 max-w-prose text-xl text-gray-500 dark:text-slate-400">
       Start new DDEV projects in seconds. Customize, share, and extend with
       ease.
     </p>
@@ -103,7 +103,7 @@ const features = [
                   <h3 class="text-lg font-medium tracking-tight text-gray-900 dark:text-white">
                     {feature.name}
                   </h3>
-                  <p class="mt-5 text-base text-gray-500">
+                  <p class="mt-5 text-base text-gray-500 dark:text-slate-400">
                     {feature.description}
                   </p>
                 </div>
