--- a/src/components/SoftwareLogos.astro
+++ b/src/components/SoftwareLogos.astro
@@ -3,7 +3,7 @@
 
 <div class="opacity-60">
   <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
-    <div class="flex justify-center content-center flex-wrap">
+    <div class="flex justify-center content-center flex-wrap dark:invert">
       <div class="p-10">
         <img class="h-12" src="/logos/php.svg" alt="PHP logo" />
       </div>
