--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -12,7 +12,7 @@ const { latestVersion } = Astro.props
 ---
 
 <div class="prose">
-  <h2 class="text-3xl mt-24">
+  <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">1/2</small>Launch a
     Provider &amp; Install DDEV
   </h2>
@@ -39,7 +39,7 @@ const { latestVersion } = Astro.props
       </a>
     </Fragment>
     <Fragment slot="GitHub Codespaces">
-      <div class="prose py-5">
+      <div class="prose py-5 dark:text-slate-400">
         <ol>
           <li>
             <a href="https://github.com/codespaces/new"
@@ -81,7 +81,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose">
-  <h2 class="text-3xl mt-24">
+  <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">2/2</small>Create a
     Project
   </h2>
@@ -119,7 +119,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose">
-  <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
+  <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
 
   <p>
     Take a peek at your project’s new <code>.ddev/</code> directory. You can add
