--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -106,8 +106,9 @@ const releaseData = await getReleases()
                   src="https://stars.medv.io/ddev/ddev.svg"
                   alt="Sparkline chart of DDEV’s GitHub stars over time"
                 />
-                <figcaption>
+                <figcaption class="dark:text-slate-400">
                   Project GitHub stars over time, courtesy of <a
+                    class="dark:text-slate-200"
                     href="https://stars.medv.io/"
                     target="_blank">stars.medv.io</a
                   >.
