--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -24,7 +24,7 @@ const title = `Support DDEV`
     <Heading title={title} subtitle={`We’d love your help!`} />
 
     <div class="px-6 lg:px-0">
-      <div class="prose text-lg mt-0 mb-24">
+      <div class="prose text-lg mt-0 mb-24 dark:text-slate-400">
         <p>
           DDEV exists because of the generosity of community members and
           sponsors.<br />
@@ -32,12 +32,12 @@ const title = `Support DDEV`
         </p>
       </div>
 
-      <div class="prose mt-12">
-        <h2>File an Issue or PR</h2>
+      <div class="prose mt-12 dark:text-slate-400">
+        <h2 class="dark:text-white">File an Issue or PR</h2>
 
         <p>
           If you have an idea, a bug report, or code to contribute, please take
-          the time to <a
+          the time to <a class="dark:text-slate-400"
             href="https://github.com/ddev/ddev/blob/master/CONTRIBUTING.md"
             target="_blank">contribute</a
           > a GitHub Issue or Pull Request.
@@ -64,7 +64,7 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12 dark:text-white">
+      <div class="prose mt-12 dark:text-slate-400">
         <h2 class="dark:text-white">Sponsor Development</h2>
         <p>
           We’re grateful for our sponsors, and all contributions to the DDEV
@@ -87,7 +87,7 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12 dark:text-white">
+      <div class="prose mt-12 dark:text-slate-400">
         <h2 class="dark:text-white">Help Others</h2>
         <p>
           There’s no shortage of questions on Discord, GitHub, and Stack
@@ -116,11 +116,11 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12 dark:text-white">
+      <div class="prose mt-12 dark:text-slate-400">
         <h2 class="dark:text-white">Improve the Docs</h2>
         <p>
           It doesn’t matter whether you’ve found a typo, can wordsmith something
-          to better explain or fit <a
+          to better explain or fit <a class="dark:text-slate-200"
             href="https://ddev.readthedocs.io/en/latest/developers/writing-style-guide/"
             target="_blank">our style guide</a
           >, or you’d like to suggest an entirely new section or use case. We’d
@@ -139,7 +139,7 @@ const title = `Support DDEV`
             }}
           />
 
-          <figcaption>
+          <figcaption class="dark:text-slate-400">
             The edit icon in the published docs links to the relevant GitHub
             source for suggestions.
           </figcaption>
@@ -165,18 +165,18 @@ const title = `Support DDEV`
           video.
         </p>
 
-        <blockquote class="twitter-tweet">
+        <blockquote class="twitter-tweet dark:text-slate-400">
           <p lang="en" dir="ltr">
-            <a
+            <a class="dark:text-slate-200"
               href="https://twitter.com/hashtag/fedora?src=hash&ref_src=twsrc%5Etfw"
               >#fedora</a
-            > 36 (just upgraded from 35) still happily runs <a
+            > 36 (just upgraded from 35) still happily runs <a class="dark:text-slate-200"
               href="https://twitter.com/hashtag/ddev?src=hash&ref_src=twsrc%5Etfw"
               >#ddev</a
-            > , one of my most used tools. <a href="https://t.co/9dPAs8BTqg"
+            > , one of my most used tools. <a  class="dark:text-slate-200" href="https://t.co/9dPAs8BTqg"
               >pic.twitter.com/9dPAs8BTqg</a
             >
-          </p>&mdash; Novák Áron (@NovakAron) <a
+          </p>&mdash; Novák Áron (@NovakAron) <a class="dark:text-slate-200"
             href="https://twitter.com/NovakAron/status/1541396362885054465?ref_src=twsrc%5Etfw"
             >June 27, 2022</a
           >
