--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -10,15 +10,15 @@ export interface Props {
 const { latestVersion } = Astro.props
 ---
 
-<div class="prose">
-  <p class="text-gray-600 mb-16">
-    We’ll use Docker Desktop since it’s the most straightforward of <a
+<div class="prose dark:text-slate-400">
+  <p class="text-gray-600 mb-16 dark:text-slate-400">
+    We’ll use Docker Desktop since it’s the most straightforward of <a class="dark:text-slate-200"
       href="https://ddev.readthedocs.io/en/latest/users/install/docker-installation/#macos"
       >several options</a
     >.
   </p>
 
-  <h2 class="text-3xl mt-24">
+  <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">1/3</small>Install
     Docker
   </h2>
@@ -26,7 +26,7 @@ const { latestVersion } = Astro.props
 
 <Tabs order={["Homebrew", "Download"]}>
   <Fragment slot="Homebrew">
-    <div class="prose py-5">
+    <div class="prose py-5 dark:text-slate-400">
       <p>
         With <a href="https://brew.sh" target="_blank">Homebrew</a> installed, you
         can install Docker Desktop with one command:
@@ -35,7 +35,7 @@ const { latestVersion } = Astro.props
     </div>
   </Fragment>
   <Fragment slot="Download">
-    <div class="prose py-5">
+    <div class="prose py-5 dark:text-slate-400">
       <p>
         Download and run the <a
           href="https://www.docker.com/products/docker-desktop"
@@ -46,7 +46,7 @@ const { latestVersion } = Astro.props
   </Fragment>
 </Tabs>
 
-<div class="prose">
+<div class="prose dark:text-slate-400">
   <p>
     Launch Docker Desktop, accept the license agreement, and make sure Docker is
     started and running.
@@ -55,19 +55,19 @@ const { latestVersion } = Astro.props
   <p>Confirm that you’ve now got a Docker provider:</p>
   <Terminal code={`→ docker -v\nDocker version 24.0.5, build ced0996`} />
 
-  <h2 class="text-3xl mt-24">
+  <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">2/3</small>Install DDEV
   </h2>
 </div>
 
 <Tabs order={["Homebrew", "Install Script"]}>
   <Fragment slot="Homebrew">
-    <div class="prose py-5">
+    <div class="prose py-5 dark:text-slate-400">
       <Terminal code={`→ brew install ddev/ddev/ddev`} />
     </div>
   </Fragment>
   <Fragment slot="Install Script">
-    <div class="prose py-5">
+    <div class="prose py-5 dark:text-slate-400">
       <Terminal
         code={`→ curl -fsSL https://ddev.com/install.sh | bash`}
       />
@@ -75,11 +75,11 @@ const { latestVersion } = Astro.props
   </Fragment>
 </Tabs>
 
-<div class="prose">
+<div class="prose dark:text-slate-400">
   <p>Confirm that you’ve now got DDEV installed: 🎉</p>
   <Terminal code={`→ ddev -v\nddev version ${latestVersion}`} />
 
-  <h2 class="text-3xl mt-24">
+  <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
     Project
   </h2>
@@ -119,8 +119,8 @@ const { latestVersion } = Astro.props
   <Terminal code={`→ ddev launch`} />
 </div>
 
-<div class="prose">
-  <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
+<div class="prose dark:text-slate-400">
+  <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
 
   <p>
     Take a peek at your project’s new <code>.ddev/</code> directory. You can add
@@ -195,12 +195,12 @@ const { latestVersion } = Astro.props
 
   <Tabs order={["Homebrew", "Install Script"]}>
     <Fragment slot="Homebrew">
-      <div class="prose py-5">
+      <div class="prose py-5 dark:text-slate-400">
         <Terminal code={`→ brew uninstall ddev`} />
       </div>
     </Fragment>
     <Fragment slot="Install Script">
-      <div class="prose py-5">
+      <div class="prose py-5 dark:text-slate-400">
         <Terminal code={`→ rm /usr/local/bin/ddev`} />
       </div>
     </Fragment>
