--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -9,8 +9,8 @@ export interface Props {
 const { latestVersion } = Astro.props
 ---
 
-<div class="prose">
-  <p class="text-gray-600 mb-16">
+<div class="prose dark:text-slate-400">
+  <p class="text-gray-600 mb-16 dark:text-slate-400">
     We’ll use WSL2 with Docker inside since it’s the fastest and most
     straightforward of <a
       href="https://ddev.readthedocs.io/en/latest/users/install/docker-installation/#windows"
@@ -18,7 +18,7 @@ const { latestVersion } = Astro.props
     >.
   </p>
 
-  <h2 class="text-3xl mt-24">
+  <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">1/3</small>Install WSL2
     with Ubuntu
   </h2>
@@ -44,7 +44,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose">
-  <h2 class="text-3xl mt-24">
+  <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">2/3</small>Run the
     Install Script
   </h2>
@@ -67,7 +67,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose">
-  <h2 class="text-3xl mt-24">
+  <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
     Project
   </h2>
@@ -108,7 +108,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose">
-  <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
+  <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
 
   <p>
     Take a peek at your project’s new <code>.ddev/</code> directory. You can add
