--- a/src/pages/blog/category/[slug].astro
+++ b/src/pages/blog/category/[slug].astro
@@ -42,7 +42,7 @@ const title = `Posts in “${name}”`
 >
   <main class="max-w-4xl mx-auto mb-24">
     <div class="py-24 px-6 lg:px-0">
-      <h1 class="font-bold text-4xl">Posts in “{name}”</h1>
+      <h1 class="font-bold text-4xl dark:text-white">Posts in “{name}”</h1>
     </div>
 
     <div
