--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -27,7 +27,7 @@ const latestRelease = await getLatestReleaseVersion()
   title={title}
   description={`Start here if you want to give DDEV a try!`}
 >
-  <main class="max-w-4xl mx-auto mb-24">
+  <main class="max-w-4xl mx-auto mb-24 dark:text-white">
     <Heading title={title} subtitle={`Install and start using DDEV.`} />
     <div class="prose mb-16">
       <PlatformPicker heading={`Choose your platform:`} />
