--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -28,7 +28,7 @@ const { latestVersion } = Astro.props
   <Fragment slot="Homebrew">
     <div class="prose py-5 dark:text-slate-400">
       <p>
-        With <a href="https://brew.sh" target="_blank">Homebrew</a> installed, you
+        With <a href="https://brew.sh" class="dark:text-white" target="_blank">Homebrew</a> installed, you
         can install Docker Desktop with one command:
       </p>
       <Terminal code={`→ brew install --cask docker`} />
@@ -39,6 +39,7 @@ const { latestVersion } = Astro.props
       <p>
         Download and run the <a
           href="https://www.docker.com/products/docker-desktop"
+          class="dark:text-white"
           target="_blank">Docker Desktop installer</a
         >.
       </p>
@@ -91,7 +92,7 @@ const { latestVersion } = Astro.props
     Initialize the project by running the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#config"
       target="_blank"
-      ><code>ddev config</code>
+      ><code class="dark:text-white">ddev config</code>
     </a> command:
   </p>
   <Terminal code={`→ ddev config`} />
@@ -106,13 +107,14 @@ const { latestVersion } = Astro.props
     If it’s a Composer project, you may also need to run <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#composer"
       target="_blank"
-      ><code>ddev composer install</code>
+      ><code class="dark:text-white">ddev composer install</code>
     </a>.
   </p>
 
   <p>
     Now run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#launch"
+      class="dark:text-white"
       target="_blank">launch command</a
     > to open your project in a browser:
   </p>
@@ -123,12 +125,13 @@ const { latestVersion } = Astro.props
   <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
 
   <p>
-    Take a peek at your project’s new <code>.ddev/</code> directory. You can add
-    this to your repo to share your DDEV config, edit <code
+    Take a peek at your project’s new <code class="dark:text-white">.ddev/</code> directory. You can add
+    this to your repo to share your DDEV config, edit <code class="dark:text-white"
       >.ddev/ddev.yaml</code
     > to change <a
       href="https://ddev.readthedocs.io/en/latest/users/configuration/config/"
-      target="_blank">project options</a
+      target="_blank"
+      class="dark:text-white">project options</a
     >, or even go about your business and pretend this folder doesn’t exist.
   </p>
 
@@ -136,8 +139,9 @@ const { latestVersion } = Astro.props
     Run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#help"
       target="_blank"
+      class="dark:text-white"
       >help command
-    </a> (or plain <code>ddev</code>) to see the actions you can take with the
+    </a> (or plain <code class="dark:text-white">ddev</code>) to see the actions you can take with the
     CLI:
   </p>
 
@@ -147,6 +151,7 @@ const { latestVersion } = Astro.props
     Use the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#describe"
       target="_blank"
+      class="dark:text-white"
       >describe command
     </a> to see a project’s parts and database connection details:
   </p>
@@ -158,6 +163,7 @@ const { latestVersion } = Astro.props
     removing anything, use the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#stop"
       target="_blank"
+      class="dark:text-white"
       >stop command
     </a>:
   </p>
@@ -169,6 +175,7 @@ const { latestVersion } = Astro.props
     project and its resources without touching your code, run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#delete"
       target="_blank"
+      class="dark:text-white"
       >delete command
     </a>:
   </p>
@@ -190,7 +197,7 @@ const { latestVersion } = Astro.props
   />
 
   <p>
-    Then remove the <code>ddev</code> binary however you installed it:
+    Then remove the <code class="dark:text-white">ddev</code> binary however you installed it:
   </p>
 
   <Tabs order={["Homebrew", "Install Script"]}>
